Update to index and images added
Update to index and images added

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Synthetic Cloud</h2>
+											<h2>Jordon Holmes </h2>
 										</header>
-										<p>An artificial intelligence company focus on autonomous vehicles that synchronise with your smart phone. The owner will be able to call the vehicle and it will arrive at the geolocation of the owner. The vehicle will autonomously drive the owner to a desired location.   </p>
+										<p>Hello, Welcome to the web. Thank you for joining me in my new improved website   </p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
@@ -127,6 +127,7 @@
 									<h2>Ipsum consequat</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+                                    <img src="images/github-256.png"/>
 								</header>
 								<!--> NEw -->
 
